--- a/Cooleaf/UI/Main.storyboard
+++ b/Cooleaf/UI/Main.storyboard
@@ -739,10 +739,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GFV-uP-otr">
-                                <rect key="frame" x="0.0" y="8" width="600" height="592"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="200" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="3O4-bC-qva">
-                                        <rect key="frame" x="0.0" y="416" width="600" height="176"/>
+                                        <rect key="frame" x="0.0" y="424" width="600" height="176"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="176" id="BBE-1Y-a05"/>
@@ -772,7 +772,7 @@
                                 <color key="backgroundColor" red="0.0" green="0.95686274510000002" blue="0.0054740344939999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="3O4-bC-qva" firstAttribute="trailing" secondItem="Ab7-Mz-HLJ" secondAttribute="trailing" id="4sE-81-1VQ"/>
-                                    <constraint firstItem="3O4-bC-qva" firstAttribute="top" secondItem="GFV-uP-otr" secondAttribute="top" constant="416" id="54w-Ae-eeP"/>
+                                    <constraint firstItem="3O4-bC-qva" firstAttribute="top" secondItem="GFV-uP-otr" secondAttribute="top" constant="424" id="54w-Ae-eeP"/>
                                     <constraint firstAttribute="trailing" secondItem="3O4-bC-qva" secondAttribute="trailing" id="Hf0-9P-MDj"/>
                                     <constraint firstItem="3O4-bC-qva" firstAttribute="bottom" secondItem="GFV-uP-otr" secondAttribute="bottomMargin" constant="8" id="LPr-kF-Kaj"/>
                                     <constraint firstItem="3O4-bC-qva" firstAttribute="leading" secondItem="GFV-uP-otr" secondAttribute="leading" id="REA-2m-EL3"/>
@@ -786,7 +786,7 @@
                         <constraints>
                             <constraint firstItem="GFV-uP-otr" firstAttribute="leading" secondItem="rDY-Av-Ztz" secondAttribute="leading" id="7r4-Nz-mmC"/>
                             <constraint firstItem="GFV-uP-otr" firstAttribute="bottom" secondItem="5Fy-bH-8PU" secondAttribute="top" id="KSB-dm-r8v"/>
-                            <constraint firstItem="GFV-uP-otr" firstAttribute="top" secondItem="rDY-Av-Ztz" secondAttribute="topMargin" constant="8" id="iev-vz-L82"/>
+                            <constraint firstItem="GFV-uP-otr" firstAttribute="top" secondItem="rDY-Av-Ztz" secondAttribute="topMargin" id="iev-vz-L82"/>
                             <constraint firstAttribute="trailing" secondItem="GFV-uP-otr" secondAttribute="trailing" id="zQd-TI-bIb"/>
                         </constraints>
                     </view>
